--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
     <h1 class="app-title">Emotion Toggler</h1>
     <div class="emoji-container">
-        <img src="./img/smiling.png" class="emoji1" id="1Emoji" />
+        <img src="./img/1.png" class="emoji1" id="1Emoji" />
     </div>
     <div class="btn-container">
         <button class="btn-toggle" onclick="toggleEmoji('extrahappy')">Extra-Happy</button>
